2017-04-04  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* base/networking.c (sockaddr_as_str): Add cases for UNIX, unknown
	and other socket types.

2017-03-30  Michael Wiegand <michael.wiegand@greenbone.net>

	* util/CMakeLists.txt: Enable largefile support when building with
	GPGME since GPGME is compiled with largefile support by default and
	requires applications using the library to be compiled with the same
	file size mode.

2017-03-28  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* util/nvticache.c (nvticache_get_by_name_full)
	(nvticache_get_by_oid_full, nvticache_get_names)

	* util/nvticache.h: Remove functions prototypes.

2017-03-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* util/kb.c (redis_save): New function.
	(KBOperations): Set kb_save to redis_save.

	* util/kb.h (struct kb_operations): Add kb_save operation.
	(kb_save): New function.

	* util/nvticache.c (nvticache_save): New function.
	(nvticache_add): Set cache_saved to 0 when adding a new nvti to the
	cache.

	* util/nvticache.h: Add new function prototype.

2017-03-23  Michael Wiegand <michael.wiegand@greenbone.net>

	* util/nvticache.c (nvticache_init): Adjust documentation to recent
	API change.

2017-03-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* util/kb.c (redis_add_str): Use redis_cmd() instead of a full
	transaction.
	(redis_cmd): Remove format attribute from prototype to handle %b
	specifier case.

2017-03-21  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Move full nvticache from .nvti files to Redis.

	* base/nvti.c (set_from_key, nvti_from_keyfile, set_keyfile_info)
	(nvti_to_keyfile): Remove functions.

	* base/nvti.h: Remove functions headers.

	* util/kb.c (redis_find): New function.
	(redis_flush_all): Add except parameter.

	* util/kb.h (struct kb_operations): Add kb_find function call. Adjust
	kb_flush prototype.
	(kb_find): New function.
	(kb_flush): Add except parameter.
