@@ -1,3 +1,8 @@
+2017-04-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
+	* util/nvticache.c (nvticache_remove): New function.
+	(nvticache_add): Use new function to remove duplicate nvt entries.
+
 2017-04-04  Timo Pollmeier <timo.pollmeier@greenbone.net>
 
 	* base/networking.c (sockaddr_as_str): Add cases for UNIX, unknown
